// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RecordsViewer > should render a tree (not virtualized)  1`] = `
<div
  class="_tc-records-viewer_ad9b4e tc-records-viewer"
>
  <div
    class="_tc-tree-header_2a680a tc-tree-header"
  >
    Records
    <div
      class="_tc-tree-header-actions_2a680a tc-tree-header-actions"
    >
      <button
        aria-describedby="00000000-0000-4000-8000-000000000000"
        aria-label="Close all"
        class="_tc-tree-header-actions-icon_2a680a tc-tree-header-actions-icon btn-icon-only btn btn-link"
        data-testid="collapse-all"
        id="CollapseAllRecords"
        role="link"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="tc-svg-icon tc-icon _svg_bf5f45 tc-icon-name-talend-minus-circle"
          focusable="false"
          name="talend-minus-circle"
          pointer-events="none"
          shape-rendering="geometricPrecision"
        />
      </button>
    </div>
  </div>
  <div
    data-props="{"value":[{"data":"myData"}],"jsonpath":"$","level":0}"
    data-testid="tree"
  />
</div>
`;

exports[`RecordsViewer > should render a tree virtualized with a header 1`] = `
<div
  class="_tc-records-viewer_ad9b4e tc-records-viewer"
>
  <div
    class="_tc-tree-header_2a680a tc-tree-header"
  >
    Records
    <div
      class="_tc-tree-header-actions_2a680a tc-tree-header-actions"
    >
      <button
        aria-describedby="00000000-0000-4000-8000-000000000000"
        aria-label="Close all"
        class="_tc-tree-header-actions-icon_2a680a tc-tree-header-actions-icon btn-icon-only btn btn-link"
        data-testid="collapse-all"
        id="CollapseAllRecords"
        role="link"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="tc-svg-icon tc-icon _svg_bf5f45 tc-icon-name-talend-minus-circle"
          focusable="false"
          name="talend-minus-circle"
          pointer-events="none"
          shape-rendering="geometricPrecision"
        />
      </button>
    </div>
  </div>
  <div
    data-props="{"cellMeasurerClassName":"_tc-records-viewer-tree-border_ad9b4e tc-records-viewer-tree-border","className":"_tc-records-viewer-tree_ad9b4e tc-records-viewer-tree","rowCount":2,"disableHeight":true}"
    data-testid="virtualized-tree"
  />
</div>
`;
